# AttentionTargetSentiment

./: README.md
data/T_data/: test.posneg  train.posneg
impl/: CMakeLists.txt  attention.cc  attention_3way_gated.cc  attention_context.cc  attention_context_gated.cc  attention_context_gated_comments.cc
